--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 app_port=":2101"
 
 #database
-DB_HOST="103.185.44.92"
-DB_NAME="run_island"
-DB_USER="run_island"
-DB_PASSWORD="AkuGoopps@23"
+DB_HOST=""
+DB_NAME=""
+DB_USER=""
+DB_PASSWORD=""
 
 #user
-username="admin"
-password="AkuGoopps@23"
+username=""
+password=""
