--- a/.env
+++ b/.env
@@ -2,11 +2,16 @@
 app_port=":2101"
 
 #database
-DB_HOST=""
-DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
+DB_HOST="103.185.44.92"
+DB_NAME="run_island"
+DB_USER="run_island"
+DB_PASSWORD="AkuGoopps@23"
+
+#ipaymu
+ipaymuVa="0000001219992704"
+ipaymuKey="SANDBOXEAC5E881-D216-4BF3-A50F-FFA14A355D3B"
+url="https://sandbox.ipaymu.com/api/v2/payment"
 
 #user
-username=""
-password=""
+username="admin"
+password="11223344"
